[metadata]
name = logram
version = 0.0.1
author = Mutlucan Tokat
author_email = mtokat1@gmail.com
description = Send logging messages to different channels (only Telegram for now)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutcato/logram
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Public
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True