[metadata]
name = logram
version = 0.0.2
author = Mutlucan Tokat
author_email = mtokat1@gmail.com
description = Send logging messages to different channels (only Telegram for now)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutcato/logram
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires=
    python-telegram-bot>=13.7
include_package_data = True